- Finally fixed the bug that prevented the buttons form keeping its alignment in smaller screens. - Removed unnecessary CSS.

--- a/fcc-random-quote-generatorv3/css/style.css
+++ b/fcc-random-quote-generatorv3/css/style.css
@@ -39,7 +39,6 @@ blockquote {
     font-size: 14pt;
     color: white;
     text-align: center;
-    left: 50%;
 }
 
 .author {
@@ -51,7 +50,6 @@ blockquote {
 
 .buttons {
     padding-top: 5vh;
-    width: 10vw;
     text-align: center;
     margin: 0 auto;
 }
